@@ -4,7 +4,6 @@ import com.papel.imdb_clone.enums.ContentType;
 import com.papel.imdb_clone.enums.Genre;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class SearchCriteria {
@@ -12,16 +11,10 @@ public class SearchCriteria {
     private String title;
     private Double minImdbRating;
     private Double maxImdbRating;
-    private Double minUserRating;
-    private Double maxUserRating;
     private Integer minYear;
-    private Integer maxYear;
-    private Integer minDuration;
-    private Integer maxDuration;
     private List<Genre> genres;
     private Genre genre;
     private ContentType contentType;
-    private String description;
     private final String sortBy; // "title", "year", "rating", "duration"
     private final boolean sortDescending;
     private Integer startYear;
@@ -31,14 +24,8 @@ public class SearchCriteria {
         this.query = query;
         this.minImdbRating = minImdb;
         this.maxImdbRating = maxImdb;
-        this.minUserRating = minUser;
-        this.maxUserRating = maxUser;
-        this.minDuration = minDuration;
-        this.maxDuration = maxDuration;
         this.genres = selectedGenres != null ? new ArrayList<>(selectedGenres) : new ArrayList<>();
-        this.description = description;
         this.minYear = yearFrom;
-        this.maxYear = yearTo;
         this.sortBy = "title";
         this.sortDescending = false;
     }
@@ -47,11 +34,8 @@ public class SearchCriteria {
         this.query = query != null ? query : "";
         this.title = keywords;
         this.minYear = yearFromValue;
-        this.maxYear = yearToValue;
         this.minImdbRating = null;
         this.maxImdbRating = null;
-        this.minUserRating = null;
-        this.maxUserRating = null;
         this.genres = new ArrayList<>();
         this.sortBy = "title";
         this.sortDescending = false;
@@ -59,7 +43,7 @@ public class SearchCriteria {
         // Set content type if provided
         if (contentTypes != null && !contentTypes.isEmpty()) {
             try {
-                this.contentType = ContentType.valueOf(contentTypes.get(0).toUpperCase());
+                this.contentType = ContentType.valueOf(contentTypes.getFirst().toUpperCase());
             } catch (IllegalArgumentException e) {
                 // If content type is invalid, leave it as null
                 this.contentType = null;
@@ -68,7 +52,6 @@ public class SearchCriteria {
     }
 
     public SearchCriteria(String sortBy, boolean sortDescending) {
-
         this.sortBy = sortBy;
         this.sortDescending = sortDescending;
     }
@@ -84,21 +67,12 @@ public class SearchCriteria {
         this.title = title;
     }
 
-
     public void setMinImdbRating(double rating) {
         this.minImdbRating = rating;
     }
 
-    public void setMinUserRating(double rating) {
-        this.minUserRating = rating;
-    }
-
     public void setMaxImdbRating(double rating) {
         this.maxImdbRating = rating;
-    }
-
-    public void setMaxUserRating(double rating) {
-        this.maxUserRating = rating;
     }
 
     public void setMinYear(Integer year) {
@@ -106,89 +80,20 @@ public class SearchCriteria {
     }
 
 
-    /**
-     * Sets the maximum year for filtering content.
-     *
-     * @param year The maximum year (inclusive)
-     * @return this SearchCriteria instance for method chaining
-     */
-    public SearchCriteria setMaxYear(Integer year) {
-        this.maxYear = year;
-        return this;
-    }
-
-    /**
-     * Sets the genres for filtering content.
-     *
-     * @param genres List of genres to filter by
-     * @return this SearchCriteria instance for method chaining
-     */
-    public SearchCriteria setGenres(Genre... genres) {
-        if (genres != null) {
-            this.genres = Arrays.asList(genres);
-        } else {
-            this.genres = new ArrayList<>();
-        }
-        return this;
-    }
-
-    /**
-     * Adds a genre to the list of genres to filter by.
-     *
-     * @param genre The genre to add
-     * @return this SearchCriteria instance for method chaining
-     */
-    public SearchCriteria addGenre(Genre genre) {
-        if (genre != null) {
-            if (this.genres == null) {
-                this.genres = new ArrayList<>();
-            }
-            this.genres.add(genre);
-        }
-        return this;
-    }
 
     /**
      * Sets the minimum IMDb rating for filtering content.
      *
      * @param rating The minimum rating (0.0 to 10.0)
-     * @return this SearchCriteria instance for method chaining
      * @throws IllegalArgumentException if rating is not between 0.0 and 10.0
      */
-    public SearchCriteria setMinRating(double rating) {
+    public void setMinRating(double rating) {
         if (rating < 0.0 || rating > 10.0) {
             throw new IllegalArgumentException("Rating must be between 0.0 and 10.0");
         }
         this.minImdbRating = rating;
-        return this;
     }
 
-    /**
-     * Sets the maximum IMDb rating for filtering content.
-     *
-     * @param rating The maximum rating (0.0 to 10.0)
-     * @return this SearchCriteria instance for method chaining
-     * @throws IllegalArgumentException if rating is not between 0.0 and 10.0
-     */
-    public SearchCriteria setMaxRating(double rating) {
-        if (rating < 0.0 || rating > 10.0) {
-            throw new IllegalArgumentException("Rating must be between 0.0 and 10.0");
-        }
-        this.maxImdbRating = rating;
-        return this;
-    }
-
-    public void setMinDuration(Integer duration) {
-        this.minDuration = duration;
-    }
-
-    public void setMaxDuration(Integer duration) {
-        this.maxDuration = duration;
-    }
-
-    public void setGenres(List<Genre> genres) {
-        this.genres = genres != null ? new ArrayList<>(genres) : new ArrayList<>();
-    }
 
     public void setGenre(Genre genre) {
         this.genre = genre;
@@ -200,10 +105,6 @@ public class SearchCriteria {
 
     public void setQuery(String query) {
         this.query = query;
-    }
-
-    public void setDescription(String description) {
-        this.description = description;
     }
 
     // Getters
@@ -231,14 +132,6 @@ public class SearchCriteria {
         return minYear;
     }
 
-    public Integer getMaxYear() {
-        return maxYear;
-    }
-
-    public String getDescription() {
-        return description;
-    }
-
     /**
      * Returns a string representation of this {@code SearchCriteria} object.
      * The string representation includes the values of all fields for debugging purposes.
@@ -251,14 +144,8 @@ public class SearchCriteria {
                 "title='" + title + '\'' +
                 ", minImdbRating=" + minImdbRating +
                 ", maxImdbRating=" + maxImdbRating +
-                ", minUserRating=" + minUserRating +
-                ", maxUserRating=" + maxUserRating +
                 ", minYear=" + minYear +
-                ", maxYear=" + maxYear +
-                ", minDuration=" + minDuration +
-                ", maxDuration=" + maxDuration +
                 ", genres=" + genres +
-                ", description='" + description + '\'' +
                 ", sortBy='" + sortBy + '\'' +
                 ", sortDescending=" + sortDescending +
                 '}';
@@ -268,7 +155,14 @@ public class SearchCriteria {
         return startYear;
     }
 
-    // Assign the provided startYear to the instance variable
+    public Object getMaxRating() {
+        return maxImdbRating;
+    }
+
+    public void setMaxYear(Integer yearToValue) {
+        this.endYear = yearToValue;
+    }
+
     public Integer getEndYear() {
         return endYear;
     }
